@@ -1,19 +1,31 @@
-To make it compile in Intellij:\
-File >> Project Structure >> Modules >> Dependency >> + (on left-side of window)
-   
-clicking the "+" sign will let you designate the directory where you have unpacked JavaFX's "lib" folder.
-   
-Scope is Compile (which is the default.) You can then edit this to call it JavaFX by double-clicking on the line.
-   
-then in:
-Run >> Edit Configurations
-Add this line to VM Options:
-```bash
---module-path /path/to/JavaFX/lib --add-modules=javafx.controls
-```
-ok. This is unnecessary.
+![GitHub Logo](src/main/resources/Other/logo_grey.png)
+# Logic Circuit Simulator
+Logic Circuit Simulator is a desktop application that allows for creating complex logic circuits and simulating them in real time. 
 
-# To run it (Java 14 required)
-```bash
-gradle run
-```
+# Installation
+1. Download the repository or click [here](https://github.com/wojtekkw10/LogicCircuitSimulator/archive/master.zip).
+2. Unpack it in a desired directory
+3. If you're on windows, go to Simulator-win/bin directory
+4. If you're on linux, go to Simulator-lin/bin directory
+5. Run the simulator.bat file
+
+# Controls
+## Gates
+To add a gate:\
+Num 1: clock \
+Num 2: buffer gate\
+Num 3: logic constant one\
+Num 4: NOT gate\
+Num 5: OR gate\
+Num 6: AND gate\
+Num 7: XOR gate\
+Right-click - remove a gate\
+R: rotate
+## Wires
+Left-click and drag - place a wire \
+Left-click on a wire and drag: remove a wire 
+
+## Other
+K: toggle UPS (Updates Per Second) limit\
+P: toggle FPS/UPS stats
+
